--- a/UwpBridgeTest/WpfApp/MainWindow.xaml
+++ b/UwpBridgeTest/WpfApp/MainWindow.xaml
@@ -7,6 +7,6 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-
+        <TextBlock x:Name="TitleText" FontSize="20" FontFamily="Meiryo UI" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     </Grid>
 </Window>
