--- a/UwpBridgeTest/UwpApp/Views/AppsDetailPage.xaml
+++ b/UwpBridgeTest/UwpApp/Views/AppsDetailPage.xaml
@@ -54,56 +54,33 @@
                         Glyph="{x:Bind ViewModel.Item.Symbol}" />
                 </Grid>
 
-                <TextBlock
-                    x:Name="title"
-                    Margin="{StaticResource XXSmallTopMargin}"
-                    RelativePanel.AlignTopWithPanel="True"
-                    RelativePanel.RightOf="itemHero"
-                    Style="{ThemeResource TitleTextBlockStyle}"
-                    Text="{x:Bind ViewModel.Item.Company, Mode=OneWay}" />
+                <StackPanel x:Name="propertiesGroup1" RelativePanel.RightOf="itemHero">
+                    <TextBlock
+                        x:Name="title"
+                        Style="{ThemeResource TitleTextBlockStyle}"
+                        Margin="{StaticResource XXSmallTopMargin}"
+                        Text="{x:Bind ViewModel.Item.Company, Mode=OneWay}" />
+                        <!--RelativePanel.AlignTopWithPanel="True"-->
+                        <!--RelativePanel.RightOf="itemHero"-->
 
-                <StackPanel x:Name="propertiesGroup1" RelativePanel.Below="itemHero">
-                    <StackPanel x:Name="statusGroup" Margin="{StaticResource SmallTopMargin}">
-                        <TextBlock Style="{StaticResource DetailSubTitleStyle}" Text="Status" />
-                        <TextBlock Style="{StaticResource DetailBodyBaseMediumStyle}" Text="{x:Bind ViewModel.Item.Status}" />
-                    </StackPanel>
-
-                    <StackPanel x:Name="orderDateGroup" Margin="{StaticResource SmallTopMargin}">
-                        <TextBlock Style="{StaticResource DetailSubTitleStyle}" Text="Order date" />
-                        <TextBlock Style="{StaticResource DetailBodyBaseMediumStyle}" Text="{x:Bind ViewModel.Item.OrderDate}" />
-                    </StackPanel>
+                    <Button
+                        x:Name="Install"
+                        Style="{ThemeResource AccentButtonStyle}"
+                        Margin="{StaticResource XXSmallTopMargin}"
+                        IsEnabled="False"
+                        Content="Install"/>
+                    <!--Command="{x:Bind ViewModel.Item.InstallCommand, Mode=OneWay}"-->
+                    <Button
+                        x:Name="Launch"
+                        Style="{ThemeResource AccentButtonStyle}"
+                        Margin="{StaticResource XXSmallTopMargin}"
+                        IsEnabled="True"
+                        Command="{x:Bind ViewModel.LaunchCommand, Mode=OneWay}"
+                        Content="Launch"/>
                 </StackPanel>
-
-                <StackPanel x:Name="propertiesGroup2" RelativePanel.Below="propertiesGroup1">
-                    <StackPanel x:Name="shipToGroup" Margin="{StaticResource SmallTopMargin}">
-                        <TextBlock Style="{StaticResource DetailSubTitleStyle}" Text="Ship to" />
-                        <TextBlock Style="{StaticResource DetailBodyBaseMediumStyle}" Text="{x:Bind ViewModel.Item.ShipTo}" />
-                    </StackPanel>
-
-                    <StackPanel x:Name="orderTotalGroup" Margin="{StaticResource SmallTopMargin}">
-                        <TextBlock Style="{StaticResource DetailSubTitleStyle}" Text="Order total" />
-                        <TextBlock Style="{StaticResource DetailBodyBaseMediumStyle}" Text="{x:Bind ViewModel.Item.OrderTotal}" />
-                    </StackPanel>
-                </StackPanel>
-
             </RelativePanel>
 
-            <TextBlock
-                Margin="{StaticResource SmallTopMargin}"
-                Style="{StaticResource DetailSubTitleStyle}"
-                Text="Note 1" />
-            <TextBlock
-                Style="{StaticResource DetailBodyStyle}"
-                Text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis hendrerit nulla, vel molestie libero. In nec ultricies magna, ultricies molestie ipsum. Mauris non dignissim velit. Etiam malesuada blandit mauris eu maximus. Quisque ornare, felis nec scelerisque mollis, risus dolor posuere magna, in gravida quam mi id nisi. Nullam mattis consequat ex. Cras nulla neque, dictum ac urna et, vestibulum feugiat ex. Pellentesque malesuada accumsan ligula, vel fringilla lacus facilisis sit amet. Proin convallis tempor arcu, ac placerat libero pretium ut. Praesent hendrerit nisl at lobortis viverra. Fusce vitae velit odio. Nam ut tortor sed purus finibus sollicitudin quis at ante. Ut sodales dolor vel eros mollis suscipit. Donec eu nulla id urna ultricies consequat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;" />
-
-            <TextBlock
-                Margin="{StaticResource SmallTopMargin}"
-                Style="{StaticResource DetailSubTitleStyle}"
-                Text="Note 2" />
-            <TextBlock
-                Margin="{StaticResource MediumBottomMargin}"
-                Style="{StaticResource DetailBodyStyle}"
-                Text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis hendrerit nulla, vel molestie libero. In nec ultricies magna, ultricies molestie ipsum. Mauris non dignissim velit. Etiam malesuada blandit mauris eu maximus. Quisque ornare, felis nec scelerisque mollis, risus dolor posuere magna, in gravida quam mi id nisi. Nullam mattis consequat ex. Cras nulla neque, dictum ac urna et, vestibulum feugiat ex. Pellentesque malesuada accumsan ligula, vel fringilla lacus facilisis sit amet. Proin convallis tempor arcu, ac placerat libero pretium ut. Praesent hendrerit nisl at lobortis viverra. Fusce vitae velit odio. Nam ut tortor sed purus finibus sollicitudin quis at ante. Ut sodales dolor vel eros mollis suscipit. Donec eu nulla id urna ultricies consequat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;" />
+            
         </StackPanel>
     </Grid>
 </Page>
