UwpAppがAppServiceを用いて自分自身にメッセージを投げる処理を実装 #6

--- a/UwpBridgeTest/UwpApp/Views/AppsDetailPage.xaml
+++ b/UwpBridgeTest/UwpApp/Views/AppsDetailPage.xaml
@@ -77,6 +77,20 @@
                         IsEnabled="True"
                         Command="{x:Bind ViewModel.LaunchCommand, Mode=OneWay}"
                         Content="Launch"/>
+                    <StackPanel Orientation="Horizontal">
+                    <Button
+                        x:Name="SendCommandTest"
+                        Style="{ThemeResource AccentButtonStyle}"
+                        Margin="{StaticResource XXSmallTopMargin}"
+                        IsEnabled="True"
+                        Command="{x:Bind ViewModel.SendCommand, Mode=OneWay}"
+                        Content="SendCommandTest"/>
+                    <TextBlock
+                        Text="{x:Bind ViewModel.SendResult, Mode=TwoWay}"
+                        Style="{ThemeResource BaseTextBlockStyle}"
+                        Margin="{StaticResource SmallLeftMargin}"
+                        VerticalAlignment="Center"/>
+                    </StackPanel>
                 </StackPanel>
             </RelativePanel>
 
